# ShuffleLab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Deck.h  DeckConstants.h  DeckUtils.h  ExperimentRunner.h  Random.h  Report.h  UI.h
src/: ExperimentRunner.cpp  Report.cpp  Shuffle.cpp  Stats.cpp  UI.cpp
